tests/render_types/render_types.exp
Error ---------------------------------------------------------------------------------------------------- import.js:6:2

Cannot cast `<Foo />` to renders `Bar` because `React.Element` [1] does not render `Bar` [2]. [incompatible-cast]

   import.js:6:2
   6| (<Foo />: renders Bar); // ERROR
       ^^^^^^^ [1]

References:
   import.js:6:11
   6| (<Foo />: renders Bar); // ERROR
                ^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- import.js:7:2

Cannot cast `<Bar />` to renders `Foo` because `React.Element` [1] does not render `Foo` [2]. [incompatible-cast]

   import.js:7:2
   7| (<Bar />: renders Foo); // ERROR
       ^^^^^^^ [1]

References:
   import.js:7:11
   7| (<Bar />: renders Foo); // ERROR
                ^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- interop.js:15:2

Cannot cast `<Baz />` to renders `Qux` because `React.Element` [1] does not render `Qux` [2]. [incompatible-cast]

   interop.js:15:2
   15| (<Baz />: renders Qux); // ERROR
        ^^^^^^^ [1]

References:
   interop.js:15:11
   15| (<Baz />: renders Qux); // ERROR
                 ^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- interop.js:21:2

Cannot cast `<RendersBaz />` to renders `Qux` because `React.Element` [1] does not render `Qux` [2]. [incompatible-cast]

   interop.js:21:2
   21| (<RendersBaz />: renders Qux); // ERROR
        ^^^^^^^^^^^^^^ [1]

References:
   interop.js:21:18
   21| (<RendersBaz />: renders Qux); // ERROR
                        ^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- interop.js:25:2

Cannot cast `<LongerChain />` to renders `Qux` because `React.Element` [1] does not render `Qux` [2].
[incompatible-cast]

   interop.js:25:2
   25| (<LongerChain />: renders Qux); // ERROR
        ^^^^^^^^^^^^^^^ [1]

References:
   interop.js:25:19
   25| (<LongerChain />: renders Qux); // ERROR
                         ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------- no_any_with_renders_react_node.js:5:10

Cannot return `Bar` because: [incompatible-return]
 - Either property `name` is missing in `React.Element` [1] but exists in statics of `Bar` [2].
 - Or class `Bar` [2] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in class `Bar` [2] but exists in `$Iterable` [4].

   no_any_with_renders_react_node.js:5:10
    5|   return Bar; // ERROR
                ^^^

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [1]
   no_any_with_renders_react_node.js:3:7
    3| class Bar {}
             ^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]


Error --------------------------------------------------------------------------------- no_spoofing_element_types.js:3:2

Cannot cast `x` to renders `React.Element` because object type [1] does not render `React.Element` [2].
[incompatible-cast]

   no_spoofing_element_types.js:3:2
   3| (x: renders React$Element<typeof Foo>); // ERROR!
       ^

References:
   no_spoofing_element_types.js:2:18
   2| declare const x: {+type: typeof Foo};
                       ^^^^^^^^^^^^^^^^^^^ [1]
   no_spoofing_element_types.js:3:5
   3| (x: renders React$Element<typeof Foo>); // ERROR!
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------- no_spoofing_element_types.js:7:2

Cannot cast `y` to renders `Bar` because object type [1] does not render `Bar` [2]. [incompatible-cast]

   no_spoofing_element_types.js:7:2
   7| (y: renders Bar); // ERROR! TODO better error message
       ^

References:
   no_spoofing_element_types.js:6:18
   6| declare const y: {+type: Bar};
                       ^^^^^^^^^^^^ [1]
   no_spoofing_element_types.js:7:5
   7| (y: renders Bar); // ERROR! TODO better error message
          ^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- poly.js:11:2

Cannot cast `el` to renders undefined because `React.Element` [1] is incompatible with undefined [2].
[incompatible-cast]

   poly.js:11:2
   11| (el: renders void); // error
        ^^ [1]

References:
   poly.js:11:14
   11| (el: renders void); // error
                    ^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- poly.js:19:37

Cannot create `FooContainer` element because `React.Element` [1] does not render `Foo` [2] in property `children`.
[incompatible-type]

   poly.js:19:37
   19| const transitiveBad = <FooContainer><Fragment><Bar /></Fragment></FooContainer>; // error
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   poly.js:16:34
   16| component FooContainer(children: renders Foo) { return null };
                                        ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:20:4

Cannot cast `rendersFooOrBar` to `typeof rendersFooOrRendersBar` because: [incompatible-cast]
 - Either `Bar` [1] does not render `Foo` [2].
 - Or `Foo` [1] does not render `Bar` [3].

   renders_to_renders.js:20:4
   20|   (rendersFooOrBar: typeof rendersFooOrRendersBar); // ERROR
          ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:12:39
   12| declare const rendersFooOrRendersBar: renders Foo | renders Bar;
                                             ^^^^^^^^^^^ [2]
   renders_to_renders.js:12:53
   12| declare const rendersFooOrRendersBar: renders Foo | renders Bar;
                                                           ^^^^^^^^^^^ [3]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:28:4

Cannot cast `rendersFoo` to renders `Bar` because `Foo` [1] does not render `Bar` [2]. [incompatible-cast]

   renders_to_renders.js:28:4
   28|   (rendersFoo: renders Bar); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:28:16
   28|   (rendersFoo: renders Bar); // ERROR
                      ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:29:4

Cannot cast `rendersFoo` to renders `React.Element` because `Foo` [1] does not render `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:29:4
   29|   (rendersFoo: renders React$Element<Bar>); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:29:16
   29|   (rendersFoo: renders React$Element<Bar>); // ERROR
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:34:4

Cannot cast `rendersFoo` to renders renders `Bar` because `Foo` [1] does not render `Bar` [2]. [incompatible-cast]

   renders_to_renders.js:34:4
   34|   (rendersFoo: renders renders Bar); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:34:16
   34|   (rendersFoo: renders renders Bar); // ERROR
                      ^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:35:4

Cannot cast `rendersFoo` to renders renders `React.Element` because `Foo` [1] does not render `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:35:4
   35|   (rendersFoo: renders renders React$Element<Bar>); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:35:16
   35|   (rendersFoo: renders renders React$Element<Bar>); // ERROR
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:46:4

Cannot cast `rendersQux` to renders union type because: [incompatible-cast]
 - Either renders `Qux` [1] is incompatible with renders `Foo` [2].
 - Or renders `Qux` [1] is incompatible with renders `Baz` [3].

   renders_to_renders.js:46:4
   46|   (rendersQux: renders (Foo | Baz)); // ERROR
          ^^^^^^^^^^ [1]

References:
   renders_to_renders.js:46:25
   46|   (rendersQux: renders (Foo | Baz)); // ERROR
                               ^^^ [2]
   renders_to_renders.js:46:31
   46|   (rendersQux: renders (Foo | Baz)); // ERROR
                                     ^^^ [3]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:58:4

Cannot cast `rendersBazOrBaz` to renders `Bar` because `Baz` [1] does not render `Bar` [2]. [incompatible-cast]

   renders_to_renders.js:58:4
   58|   (rendersBazOrBaz: renders Bar); // ERROR
          ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:58:21
   58|   (rendersBazOrBaz: renders Bar); // ERROR
                           ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:66:4

Cannot cast `rendersFooOrBar` to renders union type because: [incompatible-cast]
 - Either renders `Bar` [1] is incompatible with renders `Foo` [2].
 - Or renders `Bar` [1] is incompatible with renders `Baz` [3].

   renders_to_renders.js:66:4
   66|   (rendersFooOrBar: renders (Foo | Baz)); // ERROR
          ^^^^^^^^^^^^^^^ [1]

References:
   renders_to_renders.js:66:30
   66|   (rendersFooOrBar: renders (Foo | Baz)); // ERROR
                                    ^^^ [2]
   renders_to_renders.js:66:36
   66|   (rendersFooOrBar: renders (Foo | Baz)); // ERROR
                                          ^^^ [3]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:72:4

Cannot cast `Foo` to renders `Foo` because component Foo [1] does not render `Foo` [2]. [incompatible-cast]

   renders_to_renders.js:72:4
   72|   (Foo: renders Foo); // ERROR
          ^^^

References:
   renders_to_renders.js:2:1
    2| component Foo() renders null { return null }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:72:9
   72|   (Foo: renders Foo); // ERROR
               ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:78:4

Cannot cast `mixedElement` to renders union type because `React.Element` [1] does not render union type [2].
[incompatible-cast]

   renders_to_renders.js:78:4
   78|   (mixedElement: renders (React$Element<typeof Foo> | React$Element<typeof Bar>)); // ERROR
          ^^^^^^^^^^^^

References:
   renders_to_renders.js:76:31
   76|   declare const mixedElement: React$MixedElement;
                                     ^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:78:27
   78|   (mixedElement: renders (React$Element<typeof Foo> | React$Element<typeof Bar>)); // ERROR
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:78:4

Cannot instantiate `React.Element` because string [1] is incompatible with AbstractComponent [2] in type argument `T`.
[incompatible-type-arg]

   renders_to_renders.js:78:4
    78|   (mixedElement: renders (React$Element<typeof Foo> | React$Element<typeof Bar>)); // ERROR
           ^^^^^^^^^^^^

References:
   <BUILTINS>/react.js:162:49
   162| declare type React$MixedElement = React$Element<React$ElementType>;
                                                        ^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/react.js:203:32
   203| type React$ComponentRenders<T: React$AbstractComponent<empty>> =
                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:84:4

Cannot cast `rendersFooOrBar` to empty because `React.Element` [1] is incompatible with empty [2]. [incompatible-cast]

   renders_to_renders.js:84:4
   84|   (rendersFooOrBar: empty); // ERROR
          ^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:11:41
   11| declare const rendersFooOrBar: renders (Foo | Bar);
                                               ^^^^^^^^^ [1]
   renders_to_renders.js:84:21
   84|   (rendersFooOrBar: empty); // ERROR
                           ^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNode` to `React.MixedElement` because `React.Portal` [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]
   renders_to_renders.js:87:17
   87|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNode` to `React.MixedElement` because boolean [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]
   renders_to_renders.js:87:17
   87|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNode` to `React.MixedElement` because null [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]
   renders_to_renders.js:87:17
   87|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNode` to `React.MixedElement` because number [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]
   renders_to_renders.js:87:17
   87|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNode` to `React.MixedElement` because string [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]
   renders_to_renders.js:87:17
   87|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNode` to `React.MixedElement` because undefined [1] is incompatible with `React.Element` [2].
[incompatible-cast]

   renders_to_renders.js:87:4
   87|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]
   renders_to_renders.js:87:17
   87|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:87:4

Cannot cast `rendersNode` to `React.MixedElement` because inexact `$Iterable` [1] is incompatible with exact
`React.Element` [2]. [incompatible-exact]

   renders_to_renders.js:87:4
   87|   (rendersNode: React$MixedElement); // ERROR
          ^^^^^^^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]
   renders_to_renders.js:87:17
   87|   (rendersNode: React$MixedElement); // ERROR
                       ^^^^^^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:90:4

Cannot cast `rendersNullOrNull` to null because `$Iterable` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:90:4
   90|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:89:45
   89|   declare const rendersNullOrNull: renders (null | null);
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:90:23
   90|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:90:4

Cannot cast `rendersNullOrNull` to null because `React.Element` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:90:4
   90|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:89:45
   89|   declare const rendersNullOrNull: renders (null | null);
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:90:23
   90|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:90:4

Cannot cast `rendersNullOrNull` to null because `React.Portal` [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:90:4
   90|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:89:45
   89|   declare const rendersNullOrNull: renders (null | null);
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:90:23
   90|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:90:4

Cannot cast `rendersNullOrNull` to null because boolean [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:90:4
   90|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:89:45
   89|   declare const rendersNullOrNull: renders (null | null);
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:90:23
   90|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:90:4

Cannot cast `rendersNullOrNull` to null because number [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:90:4
   90|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:89:45
   89|   declare const rendersNullOrNull: renders (null | null);
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:90:23
   90|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:90:4

Cannot cast `rendersNullOrNull` to null because string [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:90:4
   90|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:89:45
   89|   declare const rendersNullOrNull: renders (null | null);
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:90:23
   90|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:90:4

Cannot cast `rendersNullOrNull` to null because undefined [1] is incompatible with null [2]. [incompatible-cast]

   renders_to_renders.js:90:4
   90|   (rendersNullOrNull: null); // ERROR
          ^^^^^^^^^^^^^^^^^

References:
   renders_to_renders.js:89:45
   89|   declare const rendersNullOrNull: renders (null | null);
                                                   ^^^^^^^^^^^ [1]
   renders_to_renders.js:90:23
   90|   (rendersNullOrNull: null); // ERROR
                             ^^^^ [2]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:92:15

Cannot get `rendersNode.props` because property `props` is missing in `$Iterable` [1]. [prop-missing]

   renders_to_renders.js:92:15
   92|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:92:15

Cannot get `rendersNode.props` because property `props` is missing in `Boolean` [1]. [prop-missing]

   renders_to_renders.js:92:15
   92|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:92:15

Cannot get `rendersNode.props` because property `props` is missing in `Number` [1]. [prop-missing]

   renders_to_renders.js:92:15
   92|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:92:15

Cannot get `rendersNode.props` because property `props` is missing in `React.Portal` [1]. [incompatible-use]

   renders_to_renders.js:92:15
   92|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:92:15

Cannot get `rendersNode.props` because property `props` is missing in `String` [1]. [prop-missing]

   renders_to_renders.js:92:15
   92|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:92:15

Cannot get `rendersNode.props` because property `props` is missing in null [1]. [incompatible-use]

   renders_to_renders.js:92:15
   92|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- renders_to_renders.js:92:15

Cannot get `rendersNode.props` because property `props` is missing in undefined [1]. [incompatible-use]

   renders_to_renders.js:92:15
   92|   rendersNode.props; // ERROR
                     ^^^^^

References:
   renders_to_renders.js:10:36
   10| declare const rendersNode: renders React$Node;
                                          ^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- renders_to_renders.js:98:4

Cannot cast `rendersBaz` to empty because `React.Element` [1] is incompatible with empty [2]. [incompatible-cast]

   renders_to_renders.js:98:4
    98|   (rendersBaz: empty); // ERROR
           ^^^^^^^^^^

References:
   <BUILTINS>/react.js:162:35
   162| declare type React$MixedElement = React$Element<React$ElementType>;
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   renders_to_renders.js:98:16
    98|   (rendersBaz: empty); // ERROR
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------- validate_instantiation.js:2:18

Cannot use object type [1] as a render type because: [incompatible-type]
 - Either property `key` is missing in object type [1] but exists in `React.Element` [2].
 - Or object type [1] is incompatible with `React.Portal` [3].
 - Or property `@@iterator` is missing in object type [1] but exists in `$Iterable` [4].

Render types must be a subtype of `React.Node` or a reference to a component-syntax component.

   validate_instantiation.js:2:18
    2| type Y = renders {}; // ERROR
                        ^^ [1]

References:
   <BUILTINS>/react.js:21:5
   21|   | React$Element<any>
           ^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/react.js:22:5
   22|   | React$Portal
           ^^^^^^^^^^^^ [3]
   <BUILTINS>/react.js:23:5
   23|   | Iterable<?React$Node>;
           ^^^^^^^^^^^^^^^^^^^^^ [4]



Found 45 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
